objects/vlocity_cmt__OrchestrationItem__c.object
<CustomObject>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Account__c</fullName>
        <formula>&quot;Deprecated&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssignedToManualQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To Manual Queue</label>
        <referenceTo>vlocity_cmt__ManualQueue__c</referenceTo>
        <relationshipLabel>Assigned Orchestration Items</relationshipLabel>
        <relationshipName>AssignedOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssignedToUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assigned Orchestration Itemss</relationshipLabel>
        <relationshipName>AssignedOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributesEncodingStyle__c</fullName>
        <label>Attributes Encoding Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                    <default>true</default>
                    <label>Structure</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoTaskParameters__c</fullName>
        <inlineHelpText>Parameters passed to Auto Task</inlineHelpText>
        <label>Auto Task Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConditionData__c</fullName>
        <label>ConditionData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomTaskExecutionURL__c</fullName>
        <inlineHelpText>Customization : url for custom VF page or Omni which would launch on selection of any task action/name of the item in a manual queue.</inlineHelpText>
        <label>Custom Task Execution URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndOfSequence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End of Sequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ErrorQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Error Queue</label>
        <referenceTo>vlocity_cmt__ManualQueue__c</referenceTo>
        <relationshipLabel>Orchestration Items (Manual Queue)</relationshipLabel>
        <relationshipName>Orchestration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EventConditionData__c</fullName>
        <label>Event Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExecutionLog__c</fullName>
        <label>Execution Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpectedCompletionDate__c</fullName>
        <label>Expected Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentRequestLineId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fulfilment Request Line</description>
        <inlineHelpText>Fulfilment Request Line</inlineHelpText>
        <label>Fulfilment Request Line</label>
        <referenceTo>vlocity_cmt__FulfilmentRequestLine__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSequenceBreak__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sequence Break</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSkipBranch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemImplementationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item Implementation</description>
        <label>Item Implementation</label>
        <referenceTo>vlocity_cmt__ItemImplementation__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemLength__c</fullName>
        <label>Item Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyIntervalUnit__c</fullName>
        <label>Jeopardy Safety Interval Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyInterval__c</fullName>
        <label>Jeopardy Safety Interval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardyStatus__c</fullName>
        <formula>IF( (ISBLANK(vlocity_cmt__ExpectedCompletionDate__c) || vlocity_cmt__ExpectedCompletionDate__c == null) || (ISBLANK(vlocity_cmt__DueDate__c) || vlocity_cmt__DueDate__c == null), &apos;Green&apos;,  IF((vlocity_cmt__ExpectedCompletionDate__c &gt; vlocity_cmt__DueDate__c), &apos;Green&apos;, IF((ISBLANK(vlocity_cmt__JeopardySafetyInterval__c) || vlocity_cmt__JeopardySafetyInterval__c == null), &apos;Red&apos;, IF((vlocity_cmt__DueDate__c - vlocity_cmt__ExpectedCompletionDate__c &gt; vlocity_cmt__JeopardySafetyInterval__c), &apos;Red&apos;, &apos;Yellow&apos;) ) ) )</formula>
        <label>Jeopardy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LeadTimeCompleted__c</fullName>
        <label>Lead Time (Completed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LeadTimeRunning__c</fullName>
        <label>Lead Time (Running)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LengthUnit__c</fullName>
        <label>Length Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ManualQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manual Queue</label>
        <referenceTo>vlocity_cmt__ManualQueue__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaximumNumberOfRetries__c</fullName>
        <label>Maximum Number of Retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfRetries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Number Of Retries</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationItemDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Item Definition</label>
        <referenceTo>vlocity_cmt__OrchestrationItemDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationItemTypeName__c</fullName>
        <label>Orchestration Item Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationItemType__c</fullName>
        <label>Orchestration Item Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationPlanDefinitionId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Orchestration Plan Definition</label>
        <referenceTo>vlocity_cmt__OrchestrationPlanDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationPlanDefinition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationPlanId__c</fullName>
        <label>Orchestration Plan</label>
        <referenceTo>vlocity_cmt__OrchestrationPlan__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Queue</label>
        <referenceTo>vlocity_cmt__OrchestrationQueue__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderFulfilmentRequest__c</fullName>
        <formula>IF (ISBLANK(vlocity_cmt__OrderItemId__c),
HYPERLINK(&quot;/&quot; &amp; vlocity_cmt__FulfilmentRequestLineId__r.vlocity_cmt__FulfilmentRequestID__c, vlocity_cmt__FulfilmentRequestLineId__r.vlocity_cmt__FulfilmentRequestID__r.Name),
HYPERLINK(&quot;/&quot; &amp; vlocity_cmt__OrderItemId__r.OrderId, vlocity_cmt__OrderItemId__r.Order.OrderNumber))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order/Fulfilment Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderItemsNodeName__c</fullName>
        <defaultValue>&apos;orderItems&apos;</defaultValue>
        <label>Order Items Node Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PayloadData__c</fullName>
        <label>PayloadData</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. High</fullName>
                    <color>#FF0000</color>
                    <label>1. High</label>
                </value>
                <value>
                    <fullName>2. Normal</fullName>
                    <color>#009900</color>
                    <default>true</default>
                    <label>2. Normal</label>
                </value>
                <value>
                    <fullName>3. Low</fullName>
                    <color>#3366FF</color>
                    <label>3. Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestItemsEncodingStyle__c</fullName>
        <label>Request Items Encoding Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                    <default>true</default>
                    <label>Structure</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestItemsVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Items Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>RequestItemsOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestedStartDate__c</fullName>
        <label>Requested Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResponseAttrsVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Attrs Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>RespAttrsOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResponseItemsVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Items Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>RespItemsOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResponseVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>ResponseOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Main Order Item</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                </value>
                <value>
                    <fullName>Swimlane</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Fatally Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SystemInterfaceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Interface</label>
        <referenceTo>vlocity_cmt__SystemInterface__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>SystemInterfaceId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimeoutMs__c</fullName>
        <label>Timeout (ms)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimestampCompleted__c</fullName>
        <label>Timestamp (Completed)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimestampReady__c</fullName>
        <label>Timestamp (Ready)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimestampRunning__c</fullName>
        <label>Timestamp (Running)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TranslatedState__c</fullName>
        <formula>TEXT( vlocity_cmt__State__c )</formula>
        <label>Translated State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>VlocityDataRaptorBundleId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VlocityDataRaptorBundleName__c</fullName>
        <label>VlocityDataRaptorBundleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Orchestration Item</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Orchestration Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>